<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Socket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">启动服务器</string>
    <string name="login">登录</string>
    <string name="login_name">自定义用户名</string>
    <string name="server">我是服务器</string>
    <string name="client">我是客户端</string>
    <string name="Default">不填写默认服务器111默认客户端222</string>
    <string name="about">xxxxxxxxxxxxxxxxxx</string>

</resources>
